--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,1 +1,78 @@
-// TODO
+.posts {
+  max-width: 700px;
+  margin: 4rem 0 0;
+
+  a {
+    display: block;
+
+    &+a {
+      margin-top: 3rem;
+    }
+
+    strong {
+      display: block;
+      font-size: 1.75rem;
+      font-weight: 700;
+      line-height: 2.125rem;
+      color: var(--Heading);
+
+      transition: color 0.2s;
+
+    }
+
+    p {
+      margin-top: 0.5rem;
+      font-size: 1.125rem;
+      line-height: 1.375rem;
+      font-weight: 400;
+      color: var(--Body);
+    }
+
+    &:hover strong {
+      color: var(--Highlight);
+    }
+  }
+}
+
+.info {
+  display: flex;
+  margin-top: 1.5rem;
+
+  div {
+    display: flex;
+    align-items: center;
+
+    &+div {
+      margin-left: 1.625rem;
+    }
+
+    p {
+      font-size: 0.875rem;
+      font-weight: 400;
+      line-height: 1rem;
+    }
+  }
+}
+
+.icon {
+  width: 20px;
+  height: 20px;
+  margin-right: 0.5rem;
+  align-self: flex-end;
+}
+
+.loadMorePosts {
+  border: none;
+  background: none;
+  margin-top: 4rem;
+  color: var(--Highlight);
+
+  font-size: 1.125rem;
+  font-weight: 600;
+
+  transition: filter 0.2s;
+
+  &:hover {
+    filter: brightness(0.8);
+  }
+}
