--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,1 +1,92 @@
-// TODO
+.banner {
+  width: 100%;
+  height: 400px;
+  margin-bottom: 5rem;
+
+  display: flex;
+
+  img {
+    width: 100%;
+    object-fit: cover;
+  }
+}
+
+.post {
+  h1 {
+    font-size: 3rem;
+    font-weight: bold;
+    margin-bottom: 1.5rem;
+    color: var(--Heading);
+  }
+
+  >span {
+    font-size: 0.875rem;
+    color: var(--Info);
+    font-style: italic;
+    display: block;
+    margin-top: 1rem;
+  }
+}
+
+.postInfo {
+  display: flex;
+
+  span {
+    font-size: 0.875rem;
+    text-transform: capitalize;
+    color: var(--Info);
+
+    display: flex;
+    align-items: center;
+
+    svg {
+      margin-right: 0.5rem;
+    }
+
+    &+span {
+      margin-left: 1.5rem;
+    }
+  }
+}
+
+.postContent {
+  margin-top: 4rem;
+
+  h2 {
+    font-size: 2.25rem;
+    font-weight: bold;
+    color: var(--Heading);
+    margin-bottom: 3rem;
+  }
+}
+
+.postSection {
+  font-size: 1.125rem;
+  color: var(--Body);
+  text-align: justify;
+  margin-bottom: 4rem;
+
+  p {
+    line-height: 1.5rem;
+  }
+
+  p+p {
+    margin-top: 1.5rem;
+  }
+
+  a {
+    color: var(--Highlight);
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+
+  ul {
+    margin: 1rem 2rem;
+
+    li+li {
+      margin-top: 1rem;
+    }
+  }
+}
